# app-albion-online-analysis

./: .env-dev  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend/: app.py  home.py
frontend/pages/: accounting.py  diary_calculation.py  gathering.py  market.py
frontend/utils/: enums.py
migrations/versions/: 2282cd38c60d_create_tables.py  7bb9cbc685d3_create_tables.py
src/: app.py  routes.py
src/accounting/: entities.py  enums.py  models.py  repositories.py  routes.py  talkers.py  use_cases.py
src/accounting/routing/: gathering_routes.py  items_routes.py
src/core/: database.py  settings.py
src/market_analysis/: domain.py  entities.py  models.py  repositories.py
src/market_data/: domain.py  entities.py  models.py  repositories.py  routes.py  talkers.py
src/player_stats/: domain.py  entities.py  models.py  repositories.py  routes.py
src/utils/: enums.py  helpers.py  models.py
